# screenshare

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  release-please-config.json  vite.config.js
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: capture.rs  discovery.rs  main.js  main.rs  protocol.rs  style.css  viewer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  discovery.rs  lib.rs  main.rs  protocol.rs  terminal.rs  tui.rs  viewer.rs
