[package]
name = "screenshare"
version = "0.1.0"
edition = "2021"
description = "Zero-config LAN screen sharing"

[dependencies]
eframe = "0.34"
egui = "0.34"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
local-ip-address = "0.6"
anyhow = "1"
