[package]
name = "screenshare"
version = "0.1.0"
edition = "2021"
description = "Zero-config LAN screen sharing"

[lib]
name = "screenshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
hostname = "0.4"
local-ip-address = "0.6"
anyhow = "1"
base64 = "0.22"
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.9"
